# messagebox

./: .gitignore  CMakeLists.txt  README.md  amqp.go  app.go  build.sh  go.mod  go.sum  install.sh  main.go  messagebox.desktop  messagebox.py  mqtt.go  profile.go  requirements.txt  resources.qrc  toolchain-mingw.cmake  wails.json
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  style.css
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
src/: AmqpClient.cpp  AmqpClient.h  App.cpp  App.h  MqttClient.cpp  MqttClient.h  ProfileManager.cpp  ProfileManager.h  main.cpp
